<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
        
    <item
        android:id="@+id/navigation_gait"
        android:icon="@drawable/ic_gait"
        android:title="@string/gait" />

    <item
        android:id="@+id/navigation_health"
        android:icon="@drawable/ic_health"
        android:title="@string/health" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/profile" />

    <item
        android:id="@+id/navigation_community"
        android:icon="@drawable/ic_community"
        android:title="@string/community" />
</menu>