<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.dashboard.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_exercise"
        android:name="com.example.myapplication.ui.exercise.ExerciseFragment"
        android:label="@string/exercise"
        tools:layout="@layout/fragment_exercise" />

    <fragment
        android:id="@+id/navigation_health"
        android:name="com.example.myapplication.ui.health.HealthFragment"
        android:label="@string/health"
        tools:layout="@layout/fragment_health" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.myapplication.ui.chat.ChatFragment"
        android:label="@string/chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.myapplication.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation> 