<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <!-- Status Bar Scrim for better transition -->
    <View
        android:id="@+id/status_bar_scrim"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/_4sdp"
        app:layout_constraintHeight_percent="0" />

    <!-- Custom Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorSurface"
        android:elevation="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/status_bar_scrim">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- App Logo for Home Screen -->
            <ImageView
                android:id="@+id/toolbar_logo"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                android:src="@drawable/ic_health"
                android:contentDescription="@string/app_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorPrimary" />

            <!-- Title for Other Screens -->
            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semibold"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/_18ssp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Screen Title"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <!-- Main Content -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:navGraph="@navigation/mobile_navigation" />

    <!-- Custom Bottom Navigation supporting six destinations -->
    <LinearLayout
        android:id="@+id/bottom_nav_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorSurface"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="6"
        android:paddingStart="@dimen/_4sdp"
        android:paddingEnd="@dimen/_4sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:id="@+id/nav_item_home"
            style="@style/Widget.MyApplication.BottomNavItem">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:contentDescription="@string/home"
                android:duplicateParentState="true"
                android:src="@drawable/ic_home"
                android:tint="@color/bottom_nav_item_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="true"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/home"
                android:textColor="@color/bottom_nav_item_color"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_item_gait"
            style="@style/Widget.MyApplication.BottomNavItem">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:contentDescription="@string/title_gait"
                android:duplicateParentState="true"
                android:src="@drawable/ic_gait"
                android:tint="@color/bottom_nav_item_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="true"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/gait"
                android:textColor="@color/bottom_nav_item_color"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_item_health"
            style="@style/Widget.MyApplication.BottomNavItem">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:contentDescription="@string/title_health"
                android:duplicateParentState="true"
                android:src="@drawable/ic_health"
                android:tint="@color/bottom_nav_item_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="true"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/health"
                android:textColor="@color/bottom_nav_item_color"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_item_chat"
            style="@style/Widget.MyApplication.BottomNavItem">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:contentDescription="@string/title_chat"
                android:duplicateParentState="true"
                android:src="@drawable/ic_chat"
                android:tint="@color/bottom_nav_item_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="true"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/chat"
                android:textColor="@color/bottom_nav_item_color"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_item_profile"
            style="@style/Widget.MyApplication.BottomNavItem">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:contentDescription="@string/title_profile"
                android:duplicateParentState="true"
                android:src="@drawable/ic_person"
                android:tint="@color/bottom_nav_item_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="true"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/profile"
                android:textColor="@color/bottom_nav_item_color"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_item_community"
            style="@style/Widget.MyApplication.BottomNavItem">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:contentDescription="@string/title_community"
                android:duplicateParentState="true"
                android:src="@drawable/ic_community"
                android:tint="@color/bottom_nav_item_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="true"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/community"
                android:textColor="@color/bottom_nav_item_color"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
